规范化文本发送和模板发送的接口命名
